--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VerifyNumber"></activity>
-        <activity android:name=".SignUpPage" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".VerifyNumber"  android:noHistory="true"></activity>
+        <activity android:name=".SignUpPage"  android:noHistory="true"/>
+        <activity android:name=".MainActivity" android:noHistory="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
