--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pkg.mychatapplication">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,10 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VerifyNumber"  android:noHistory="true"></activity>
-        <activity android:name=".SignUpPage"  android:noHistory="true"/>
-        <activity android:name=".MainActivity" android:noHistory="true">
+        <activity android:name=".ProfileActivity">
 
+        </activity>
+        <activity
+            android:name=".VerifyNumber"
+            android:noHistory="true" />
+        <activity
+            android:name=".SignUpPage"
+            android:noHistory="true" />
+
+        <activity
+            android:name=".MainActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
