--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.googlecode.libphonenumber:libphonenumber:7.1.1'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
 }
